# coppermoon

./: .gitignore  ANALYSIS.md  Cargo.toml  Dockerfile  Makefile  README.md  build.ps1
.claude/: settings.json  settings.local.json
.github/workflows/: release.yml
crates/coppermoon/: Cargo.toml  README.md  build.rs
crates/coppermoon/src/: cli.rs  main.rs  repl.rs
crates/coppermoon_core/: Cargo.toml  README.md
crates/coppermoon_core/src/: async_runtime.rs  error.rs  event_loop.rs  lib.rs  module.rs  runtime.rs
crates/coppermoon_std/: Cargo.toml  README.md
crates/coppermoon_std/src/: archive.rs  buffer.rs  console.rs  crypto.rs  datetime.rs  fs.rs  http.rs  http_server.rs  json.rs  lib.rs  net.rs  os.rs  path.rs  prelude.rs  process.rs  regex.rs  string_ext.rs  table_ext.rs  term.rs  time.rs  websocket.rs
crates/mysql/: Cargo.toml  README.md
crates/mysql/src/: lib.rs
crates/postgresql/: Cargo.toml  README.md
crates/postgresql/src/: lib.rs
crates/sqlite/: Cargo.toml  README.md
crates/sqlite/src/: lib.rs
examples/: freight_example.lua  hello.lua  honeymoon_example.lua  server.lua  tailwind_example.lua  test_async.lua  test_modules.lua  test_stdlib.lua
examples/lib/: math_utils.lua
examples/native-module/: Cargo.toml  harbor.toml
examples/native-module/src/: lib.rs
installer/: README.md  install.ps1  install.sh
tools/lua-shared/: Cargo.toml
tools/lua-shared/src/: main.rs
