[workspace]
resolver = "2"
members = [
    "crates/coppermoon",
    "crates/coppermoon_core",
    "crates/coppermoon_std",
    "crates/harbor",
    "crates/shipyard",
    "crates/sqlite",
    "crates/mysql",
    "crates/postgresql",
]

[workspace.package]
version = "0.1.31"
edition = "2021"
authors = ["CopperMoon Contributors"]
license = "MIT"
repository = "https://github.com/coppermoon/coppermoon"
description = "A high-performance Lua runtime written in Rust"

[workspace.dependencies]
# Lua integration
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "send", "serialize"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
colored = "2.2"
libloading = "0.8"
