[package]
name = "coppermoon_sqlite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SQLite bindings for CopperMoon Lua runtime"

[dependencies]
mlua.workspace = true
thiserror.workspace = true

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }
